depfile.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tes-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tes-app
  template:
    metadata:
      labels:
        app: tes-app
    spec:
      containers:
      - name: tes-container
        image: 
        ports:
        - containerPort: 8080
