ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tes-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: tes-service
            port:
              number: 80
      - path: /app2
        pathType: Prefix
        backend:
          service:
            name: tes-service2
            port:
              number: 80
